# polars-scheduler

./: .aiignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
examples/: demo.py  nutrition.py
polars-scheduler-py/: Cargo.toml  pyproject.toml
polars-scheduler-py/python/: demo.py
polars-scheduler-py/python/polars_scheduler/: __init__.py  utils.py
polars-scheduler-py/src/: expressions.rs  lib.rs
polars-scheduler-py/tests/: README.md  boundaries_test.py  conftest.py  core_test.py  frequency_test.py  strategy_test.py  window_test.py
polars-scheduler-py/tests/constraints/: .py  after_test.py  apart_test.py  before_test.py
scheduler-cli/: Cargo.toml  README.md
scheduler-cli/src/: cli.rs  data.rs  data_simple.rs  main.rs
scheduler-core/: Cargo.toml
scheduler-core/src/: domain.rs  lib.rs  parse.rs  solver.rs
src/polars_scheduler/: __init__.py  dsl.py
tests/: core_test.py
