[package]
name = "polars-scheduler-py"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Louis Maddox <louismmx@gmail.com>"]
description = "Polars plugin for scheduling events with constraints"

[lib]
name = "_polars_scheduler"
crate-type = ["cdylib"]

[dependencies]
scheduler-core = { path = "../scheduler-core" }
pyo3 = { workspace = true }
pyo3-polars = { workspace = true }
polars = { workspace = true, features = ["dtype-struct"] }
polars-arrow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
